--- a/Rb Spectroscopy/lab report/test/test.tex
+++ b/Rb Spectroscopy/lab report/test/test.tex
@@ -1,4 +1,5 @@
 \documentclass[11pt,twocolumn]{revtex4-2}
+\usepackage{lipsum} 
 
 \begin{document}
 
@@ -9,5 +10,7 @@
 \section{Introduction}
 
 Test test test test test 
+
+\lipsum
 
 \end{document}
