--- a/Rb Spectroscopy/lab report/report.tex
+++ b/Rb Spectroscopy/lab report/report.tex
@@ -9,6 +9,7 @@
 \usepackage{microtype}
 \usepackage{comment}
 \usepackage{bm}
+\usepackage{lipsum}
 
 \captionsetup{justification=Justified}
 
@@ -52,7 +53,7 @@
 
 \section{\label{sec:Intro} Introduction}
 
-Test test test test test 
+\lipsum
 
 
 \end{document}
