some work on this

--- a/Rb Spectroscopy/personal/Notebook_Data_Processing.ipynb
+++ b/Rb Spectroscopy/personal/Notebook_Data_Processing.ipynb
@@ -4,21 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Notebook for Linearising, Normalising and Fitting Raw Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## We recommend running the notebook without uncommenting the user interface parts first. Troubleshooting tips can be found at end of notebook"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Packages needed for Notebook. In addition, for fitting the packages 'lmfit' and 'elecsus' are needed which can be found here: https://github.com/durham-qlm/ElecSus"
+    "## Setup"
    ]
   },
   {
@@ -38,6 +24,7 @@
     "import scipy.interpolate as interpolate\n",
     "import scipy.signal\n",
     "from scipy.optimize import curve_fit\n",
+    "from pandas import read_csv\n",
     "\n",
     "from matplotlib.ticker import MultipleLocator\n",
     "import matplotlib.ticker as tck\n",
@@ -66,13 +53,6 @@
    "source": [
     "# Colour Palette\n",
     "rcParams[\"axes.prop_cycle\"]=cycler(color=['#68246D', '#FFD53A', '#00AEEF', '#BE1E2D', '#AFA961'])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## At several stages of the data processing, we require polynomials of various degrees, they are all defined here"
    ]
   },
   {
@@ -134,69 +114,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c:\\Local Documents\\QLM-Experimental-Skills\\Rb Spectroscopy\\personal\n"
+     ]
+    }
+   ],
+   "source": [
+    "# This works differently in jupyter notebook for some reason\n",
+    "os.chdir(os.path.abspath(''))\n",
+    "print(os.getcwd())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Replace file path with file path where Notebook_Folder is located on your computer"
+    "## Importing Data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.0348      0.010485    0.18521357]\n",
+      " [-0.034716    0.01046947  0.18923367]\n",
+      " [-0.034632    0.01023759  0.19278735]\n",
+      " ...\n",
+      " [ 0.132864    0.00998014  0.25757537]\n",
+      " [ 0.132948    0.01006331  0.25214607]\n",
+      " [ 0.133032    0.00998706  0.24953517]]\n"
+     ]
+    }
+   ],
    "source": [
-    "#os.chdir('C:\\\\Users\\\\...\\\\Notebook_Folder')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## We import all the data to be processed in this notebook."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## We will process from start to finish a spectrum at 20C (from paper)\n",
-    "## We will additionally fit spectra at 40 and 73C (from paper)\n",
-    "## In the Appendix, we normalise the same 73C to show how the zero offset can be extracted (and additionally how to normalise difficult spectra)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Raw Room temperature Nat abundance Rb Spectra Data\n",
-    "Rb_spectrum = np.loadtxt('./Dopp_Broadened_20C.csv',delimiter = ',',dtype='float',skiprows=1)\n",
-    "Sub_Doppler = np.loadtxt('./Sub_Doppler Spectrum.csv',delimiter = ',',dtype='float',skiprows=1)\n",
-    "etalon_data = np.loadtxt('./Etalon.csv',delimiter = ',',dtype='float',skiprows=1)\n",
+    "doppler = read_csv(\"capture_3_michael.csv\").values[1:].astype(float)\n",
+    "Rb_doppler = doppler[:,0]\n",
+    "michael_doppler = doppler[:,1]\n",
     "\n",
-    "#Pre-linearised Hot nat abundance Rb Spectrum used to find zero\n",
-    "Hot_Spectrum = np.loadtxt('./Dopp_Broadened_73C Lin.csv',delimiter = ',',dtype='float',skiprows=1)\n",
-    "\n",
-    "#Pre-normalised nat abundance Rb Spectral data which is fit later\n",
-    "Rb_spectrum2 = np.loadtxt('./Dopp_Broadened_40C Norm.csv',delimiter = ',',dtype='float',skiprows=1)\n",
-    "Rb_spectrum3 = np.loadtxt('./Dopp_Broadened_73C Norm.csv',delimiter = ',',dtype='float',skiprows=1)\n",
-    "\n",
-    "Time = Rb_spectrum[:,0] # units: ms  # data for time in first coloumn\n",
-    "Dopp_Broad_Spec = Rb_spectrum[:,1] #units: V #data for voltage in second column\n",
-    "Etalon = etalon_data[:,1] # units: ms  # data for time in first coloumn\n",
-    "Sub_Dopp=Sub_Doppler[:,1] #units: V #data for voltage in second column\n",
-    "\n",
-    "Hot_Spectrum_Frequencies=Hot_Spectrum[:,0] #units: GHz (Note 1e3*MHz)\n",
-    "Hot_Spectrum_Voltages=Hot_Spectrum[:,1] #units: V\n",
-    "\n",
-    "Dopp_Broad_Spec_2_Norm_Detunings= Rb_spectrum2[:,0] #units: MHz\n",
-    "Dopp_Broad_Spec_2_Norm_Vals= Rb_spectrum2[:,1] #units: Normalised Transmission\n",
-    "\n",
-    "Dopp_Broad_Spec_3_Norm_Detunings= Rb_spectrum3[:,0] #units: MHz\n",
-    "Dopp_Broad_Spec_3_Norm_Vals= Rb_spectrum3[:,1] #units: Normalised Transmission\n",
-    "\n"
+    "# will import the rest later\n",
+    "# unfortunately doppler averaging doesnt go over full range...\n"
    ]
   },
   {
