syncing, issue with time axis

--- a/Rb Spectroscopy/personal/Notebook_Data_Processing.ipynb
+++ b/Rb Spectroscopy/personal/Notebook_Data_Processing.ipynb
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,25 +143,14 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[-0.0348      0.010485    0.18521357]\n",
-      " [-0.034716    0.01046947  0.18923367]\n",
-      " [-0.034632    0.01023759  0.19278735]\n",
-      " ...\n",
-      " [ 0.132864    0.00998014  0.25757537]\n",
-      " [ 0.132948    0.01006331  0.25214607]\n",
-      " [ 0.133032    0.00998706  0.24953517]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "doppler = read_csv(\"capture_3_michael.csv\").values[1:].astype(float)\n",
-    "Rb_doppler = doppler[:,0]\n",
-    "michael_doppler = doppler[:,1]\n",
+    "time_doppler = doppler[:,0]\n",
+    "Rb_doppler = doppler[:,1]\n",
+    "michael_doppler = doppler[:,2]\n",
+    "\n",
+    "sub_doppler = read_csv(\"sub doppler 1\").values[1:].astype(float)\n",
     "\n",
     "# will import the rest later\n",
     "# unfortunately doppler averaging doesnt go over full range...\n"
@@ -178,38 +167,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Interactive plot to crop data to region of interest. Two points required. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Do note for normalisation later in the process, you will need to include some data away from the resonances (See Steps 3 and 5). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "\"#this is one of the originally uncommented cells\\n%matplotlib qt\\nplt.plot(Time,Etalon/max(Etalon))\\nplt.plot(Time,Dopp_Broad_Spec)\\nplt.plot(Time,Sub_Dopp)\\n\\n\\n\\nprint(r'Select region of interest')\\nx_crop = plt.ginput(2)  # after 2 click of mouse of the figure, figure will disappear and give us what we want. \\n\\n\\nplt.show(block=False)  #figure windows are displayed and return immediately\\nplt.close()  # It plots the graph in seperate windows\""
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Select region of interest\n"
+     ]
     }
    ],
    "source": [
-    "\"\"\"#this is one of the originally uncommented cells\n",
+    "#this is one of the originally uncommented cells\n",
     "%matplotlib qt\n",
-    "plt.plot(Time,Etalon/max(Etalon))\n",
-    "plt.plot(Time,Dopp_Broad_Spec)\n",
-    "plt.plot(Time,Sub_Dopp)\n",
+    "plt.plot(time_doppler,time_doppler/max(time_doppler))\n",
+    "plt.plot(time_doppler,Rb_doppler)\n",
+    "#plt.plot(time_doppler,Sub_Dopp)\n",
     "\n",
     " \n",
     "  \n",
@@ -218,31 +197,7 @@
     "\n",
     "\n",
     "plt.show(block=False)  #figure windows are displayed and return immediately\n",
-    "plt.close()  # It plots the graph in seperate windows\"\"\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Cropped Points Used in Paper "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x_crop=[(-0.064253938172043, 0.649457235915466),(0.07161903837365591, 0.5843899211873785)]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "plt.close()  # It plots the graph in seperate windows\n",
     "%matplotlib inline "
    ]
   },
